--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Query lido staking rewards and automated tracking",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:bun": "bun index.js"
   },
   "repository": {
     "type": "git",
