--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/MrMarciaOng/lido-telegram-bot#readme",
   "dependencies": {
     "axios": "^1.5.1",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "install": "^0.13.0",
     "node-cron": "^3.0.2",
